# TeamP7I

./: CMakeLists.txt
acc_server/: CMakeLists.txt  acc_server.c  acc_server.h
car/: car.c
dashboard/: lwipopts.h
dashboard/receiver/: CMakeLists.txt  dashboard_receiver.c
dashboard/sender/: CMakeLists.txt  dashboard_sender.c  dashboard_sender.h
encoder/: CMakeLists.txt  encoder.c  encoder.h
irline/: CMakeLists.txt  barcode.c
irline_barcode/: CMakeLists.txt  barcode.c  barcode.h
irline_detector/: CMakeLists.txt  detector.c  detector.h
motor/: CMakeLists.txt  motor.c  motor.h
remote_control/: CMakeLists.txt  acc_client.c
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
